--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2018.1.18
 chardet==3.0.4
 idna==2.6
 lxml==4.1.1
+Pillow==5.0.0
 pip==9.0.1
 requests==2.18.4
+selenium==3.9.0
 setuptools==38.5.1
 urllib3==1.22
 wheel==0.30.0
